--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
 
   </div>
   <section class="summary">
-    Hello! If this post is visible then I have not finished migrating the old posts into gohugoio/hugo&rsquo;s format yet.
-The main goal of this blog is to showcase small projects and share insight I have gained in security, nautral language processing, and computers in general. You can also expect to see many CTF problem writeups as I revisit old problems and solve new ones.
-Thanks for stopping by. If you have any questions or comments send me an email at cganas-anon@forward.  <a href="/post/placeholder/">Read More...</a>
+    Hello! If this post is visible then I am in the process of migrating my old personal blog into this one. Worthy posts from the old one will be published here in gohugoio/hugo&rsquo;s format.
+The main goal of this blog is to showcase small projects and share insight I have gained in security, nautral language processing, and computers in general. You can also expect to see many CTF problem writeups as I revisit old problems and solve new ones.  <a href="/post/placeholder/">Read More...</a>
   </section>
 </article>
 
